--- a/stats.html
+++ b/stats.html
@@ -459,8 +459,11 @@
     border-collapse: collapse;
     max-width: 450px;
     text-align: left;
+    overflow: auto;
 }
-
+#statistics::-webkit-scrollbar {
+display: none;
+}
 
     #statistics td {
         padding: 5px;
