--- a/stats.html
+++ b/stats.html
@@ -459,11 +459,13 @@
     border-collapse: collapse;
     max-width: 450px;
     text-align: left;
-    overflow: auto;
 }
-#statistics::-webkit-scrollbar {
-display: none;
+#statistics {
+  scrollbar-color: transparent transparent;
+  overflow-y: auto;
+  height: 500px;
 }
+
 
     #statistics td {
         padding: 5px;
