--- a/stats.html
+++ b/stats.html
@@ -494,7 +494,8 @@ height: 500px;
 
   #statistics h2 {
       color: rgb(46, 175, 226);
-      font-size: 40px;
+      font-size: 30px;
+      line-height: 5px;
   }
   #statistics h3 {
       color: rgb(89, 136, 155);
