--- a/stats.html
+++ b/stats.html
@@ -496,6 +496,7 @@ height: 500px;
       color: rgb(46, 175, 226);
       font-size: 30px;
       line-height: 5px;
+      text-align: center;
   }
   #statistics h3 {
       color: rgb(89, 136, 155);
