--- a/gallery.html
+++ b/gallery.html
@@ -2076,6 +2076,7 @@
     #badges img {
         border: palegoldenrod 5px solid;
         border-radius: 100px;
+        height: 100px;
     }
     #search {   
         padding: 10px; 
