--- a/gallery.html
+++ b/gallery.html
@@ -2077,7 +2077,7 @@
         border: palegoldenrod 5px solid;
         border-radius: 100px;
         height: 70px;
-        width:P 70px;
+        width: 70px;
     }
     #search {   
         padding: 10px; 
